--- a/HW5/index.html
+++ b/HW5/index.html
@@ -63,6 +63,7 @@
                 <br/>
                 <span style="font-weight: bold;">C# 10 and .NET 6</span>
             </div>
+            
             <div style="width: 400px;height: 300px;">
                 <span style="font-weight: bold;">44.99</span><br/>
                 <label>Qty: </label>
@@ -71,7 +72,7 @@
                 <button>Add</button>
             </div>
 
-            <div style="background-color: cornflowerblue;width: 300px;height: 300px;justify-content: end;">
+            <div style="background-color: cornflowerblue;width: 300px;height: 300px;">
                 <span style="font-weight: bold; justify-content: end;">Total Cost: $89.98</span>
             </div>
         </div>
