--- a/exam2/index.html
+++ b/exam2/index.html
@@ -1,23 +1,65 @@
 <html>
     <head>
-        <title>MIS 3033 Exam 2 Spring 2024 [Exam code here] Kameron Hayes</title>
+        <title>MIS 3033 Exam 2 Spring 2024 [AYLT] Kameron Hayes</title>
         <link rel="icon" href="static/img/head1.png"/>
         <link rel="stylesheet" href="static/site.css"/>
     </head>
 
     <body>
-        [exam code]
+        [AYLT]
+        <div id="maindiv">
 
-        <img src="static/img/a.svg" style="height: 50px;"/>
-        <img src="static/img/b.svg" style="height: 50px;"/>
-        <img src="static/img/css.svg" style="height: 50px;"/>
-        <img src="static/img/head1.png" style="height: 50px;"/>
-        <img src="static/img/head2.png" style="height: 50px;"/>
-        <img src="static/img/html.svg" style="height: 50px;"/>
-        <img src="static/img/javascript.svg" style="height: 50px;"/>
-        <img src="static/img/linkedin.png" style="height: 50px;"/>
-        <img src="static/img/logo.svg" style="height: 50px;"/>
-        <img src="static/img/sqlite.svg" style="height: 50px;"/>
+            <div id="header">
+                <span style="font-size: 30pt;color: dodgerblue;text-transform: uppercase;font-weight: bold;">I love Programming!</span>
+                <img src="static/img/a.svg" style="height: 100px; align-items: end; justify-content: end;"/>
+            </div>
+            <div id="content1">
+                <div id="leftdiv">
+                    <div>
+                        <span style="color: dodgerblue;font-size: 20pt;font-weight: bold;display: flex;flex-direction: row; align-items: center;justify-content: center;">I love MIS 3033</span>
+                    </div>
+                    <div>
+                        <br/>
+                        <img src="static/img/b.svg" style="width: 400px;display: flex;flex-direction: row;align-items: center;justify-content: center;">
+                    </div>
+                </div>
+                <div id="rightdiv">
+                    <div id="updiv">
+                        <div>
+                            <br/>
+                            <span style="background-color: lightskyblue; font-size: 20px;font-weight: bold;border-radius: 5px;">What I already learned:</span>
+                        </div>
+                        <br/><br/>
+                        <div>
+                            <ul>
+                                <li>C#</li>
+                                <li>C# Entity Framework</li>
+                                <li>Database Sqlite</li>
+                                <li>HTML & CSS</li>
+                            </ul>
+                        </div>
+                      
+                    </div>
+                    <div id="downdiv">
+                        <div>
+                            <span style="font-size: 20px;font-weight: bold;">What I am going to learn next:</span>
+                        </div>
+                        <ol>
+                            <li>JavaScript</li>
+                            <li>BootStrap</li>
+                            <li>ASP.NET MVS</li>
+                            <li>Web REST API</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div id="footer">
+                <span style="color: darkgrey;">Designed and Developed by Kameron Hayes for MIS 3033 Exam 2</span>
+            </div>
+
+
+        </div>
+       
     </body>
 
 </html>
